--- a/jupyter_notebooks/Introduction to BGP Analysis.ipynb
+++ b/jupyter_notebooks/Introduction to BGP Analysis.ipynb
@@ -27,7 +27,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/samir/git/pybatfish/pybatfish/client/commands.py:48: UserWarning: Pybatfish public API is being updated, note that API names and parameters will soon change.\n",
+      "/Users/harshverma/sprints/notebooks/pybatfish/venv/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/Users/harshverma/sprints/notebooks/pybatfish/pybatfish/client/commands.py:48: UserWarning: Pybatfish public API is being updated, note that API names and parameters will soon change.\n",
       "  \"Pybatfish public API is being updated, note that API names and parameters will soon change.\")\n"
      ]
     }
@@ -401,30 +403,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>as2border1</td>\n",
-       "      <td>10.12.11.2</td>\n",
-       "      <td>default</td>\n",
-       "      <td>as2border1:GigabitEthernet0/0</td>\n",
        "      <td>as1border1</td>\n",
-       "      <td>10.12.11.1/32</td>\n",
+       "      <td>None</td>\n",
+       "      <td>default</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3.2.2.2/32</td>\n",
        "      <td>EBGP_SINGLEHOP</td>\n",
-       "      <td>UNIQUE_MATCH</td>\n",
-       "      <td>1</td>\n",
+       "      <td>NO_LOCAL_IP</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>as3core1</td>\n",
-       "      <td>3.10.1.1</td>\n",
-       "      <td>default</td>\n",
-       "      <td>as3core1:Loopback0</td>\n",
-       "      <td>as3border2</td>\n",
-       "      <td>3.2.2.2/32</td>\n",
-       "      <td>IBGP</td>\n",
-       "      <td>UNIQUE_MATCH</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>as1border2</td>\n",
        "      <td>1.2.2.2</td>\n",
        "      <td>default</td>\n",
@@ -436,16 +426,28 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>as1border1</td>\n",
-       "      <td>None</td>\n",
+       "      <th>2</th>\n",
+       "      <td>as3core1</td>\n",
+       "      <td>3.10.1.1</td>\n",
        "      <td>default</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>as3core1:Loopback0</td>\n",
+       "      <td>as3border2</td>\n",
        "      <td>3.2.2.2/32</td>\n",
+       "      <td>IBGP</td>\n",
+       "      <td>UNIQUE_MATCH</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>as2border1</td>\n",
+       "      <td>10.12.11.2</td>\n",
+       "      <td>default</td>\n",
+       "      <td>as2border1:GigabitEthernet0/0</td>\n",
+       "      <td>as1border1</td>\n",
+       "      <td>10.12.11.1/32</td>\n",
        "      <td>EBGP_SINGLEHOP</td>\n",
-       "      <td>NO_LOCAL_IP</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>UNIQUE_MATCH</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -569,18 +571,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>as2dist2</td>\n",
-       "      <td>2.1.3.2</td>\n",
-       "      <td>default</td>\n",
-       "      <td>as2dist2:Loopback0</td>\n",
-       "      <td>as2core2</td>\n",
-       "      <td>2.1.2.2/32</td>\n",
-       "      <td>IBGP</td>\n",
-       "      <td>UNIQUE_MATCH</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
        "      <td>as1border1</td>\n",
        "      <td>10.12.11.1</td>\n",
        "      <td>default</td>\n",
@@ -588,6 +578,18 @@
        "      <td>as2border1</td>\n",
        "      <td>10.12.11.2/32</td>\n",
        "      <td>EBGP_SINGLEHOP</td>\n",
+       "      <td>UNIQUE_MATCH</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>as2dist2</td>\n",
+       "      <td>2.1.3.2</td>\n",
+       "      <td>default</td>\n",
+       "      <td>as2dist2:Loopback0</td>\n",
+       "      <td>as2core2</td>\n",
+       "      <td>2.1.2.2/32</td>\n",
+       "      <td>IBGP</td>\n",
        "      <td>UNIQUE_MATCH</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -821,18 +823,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
-       "      <td>as2dist2</td>\n",
-       "      <td>2.1.3.2</td>\n",
-       "      <td>default</td>\n",
-       "      <td>as2dist2:Loopback0</td>\n",
-       "      <td>as2core1</td>\n",
-       "      <td>2.1.2.1/32</td>\n",
-       "      <td>IBGP</td>\n",
-       "      <td>UNIQUE_MATCH</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
        "      <td>as3border2</td>\n",
        "      <td>3.2.2.2</td>\n",
        "      <td>default</td>\n",
@@ -843,16 +833,28 @@
        "      <td>UNIQUE_MATCH</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>as2dist2</td>\n",
+       "      <td>2.1.3.2</td>\n",
+       "      <td>default</td>\n",
+       "      <td>as2dist2:Loopback0</td>\n",
+       "      <td>as2core1</td>\n",
+       "      <td>2.1.2.1/32</td>\n",
+       "      <td>IBGP</td>\n",
+       "      <td>UNIQUE_MATCH</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "          Node    Local_IP      VRF                Local_Interface  \\\n",
-       "0   as2border1  10.12.11.2  default  as2border1:GigabitEthernet0/0   \n",
-       "1     as3core1    3.10.1.1  default             as3core1:Loopback0   \n",
-       "2   as1border2     1.2.2.2  default           as1border2:Loopback0   \n",
-       "3   as1border1        None  default                           None   \n",
+       "0   as1border1        None  default                           None   \n",
+       "1   as1border2     1.2.2.2  default           as1border2:Loopback0   \n",
+       "2     as3core1    3.10.1.1  default             as3core1:Loopback0   \n",
+       "3   as2border1  10.12.11.2  default  as2border1:GigabitEthernet0/0   \n",
        "4     as2core1     2.1.2.1  default             as2core1:Loopback0   \n",
        "5   as3border2  10.13.22.3  default  as3border2:GigabitEthernet0/0   \n",
        "6     as2core2     2.1.2.2  default             as2core2:Loopback0   \n",
@@ -863,8 +865,8 @@
        "11  as3border1  10.23.21.3  default  as3border1:GigabitEthernet1/0   \n",
        "12    as1core1    1.10.1.1  default             as1core1:Loopback0   \n",
        "13    as2dist1     2.1.3.1  default             as2dist1:Loopback0   \n",
-       "14    as2dist2     2.1.3.2  default             as2dist2:Loopback0   \n",
-       "15  as1border1  10.12.11.1  default  as1border1:GigabitEthernet1/0   \n",
+       "14  as1border1  10.12.11.1  default  as1border1:GigabitEthernet1/0   \n",
+       "15    as2dist2     2.1.3.2  default             as2dist2:Loopback0   \n",
        "16    as2core1     2.1.2.1  default             as2core1:Loopback0   \n",
        "17  as2border2  10.23.21.2  default  as2border2:GigabitEthernet0/0   \n",
        "18  as2border2     2.1.1.2  default           as2border2:Loopback0   \n",
@@ -884,14 +886,14 @@
        "32    as2core2     2.1.2.2  default             as2core2:Loopback0   \n",
        "33    as3core1    3.10.1.1  default             as3core1:Loopback0   \n",
        "34    as2core1     2.1.2.1  default             as2core1:Loopback0   \n",
-       "35    as2dist2     2.1.3.2  default             as2dist2:Loopback0   \n",
-       "36  as3border2     3.2.2.2  default           as3border2:Loopback0   \n",
+       "35  as3border2     3.2.2.2  default           as3border2:Loopback0   \n",
+       "36    as2dist2     2.1.3.2  default             as2dist2:Loopback0   \n",
        "\n",
        "   Remote_Node  Remote_Prefix    Session_Type Configured_Status  \\\n",
-       "0   as1border1  10.12.11.1/32  EBGP_SINGLEHOP      UNIQUE_MATCH   \n",
-       "1   as3border2     3.2.2.2/32            IBGP      UNIQUE_MATCH   \n",
-       "2     as1core1    1.10.1.1/32            IBGP      UNIQUE_MATCH   \n",
-       "3         None     3.2.2.2/32  EBGP_SINGLEHOP       NO_LOCAL_IP   \n",
+       "0         None     3.2.2.2/32  EBGP_SINGLEHOP       NO_LOCAL_IP   \n",
+       "1     as1core1    1.10.1.1/32            IBGP      UNIQUE_MATCH   \n",
+       "2   as3border2     3.2.2.2/32            IBGP      UNIQUE_MATCH   \n",
+       "3   as1border1  10.12.11.1/32  EBGP_SINGLEHOP      UNIQUE_MATCH   \n",
        "4     as2dist2     2.1.3.2/32            IBGP      UNIQUE_MATCH   \n",
        "5   as1border2  10.13.22.1/32  EBGP_SINGLEHOP      UNIQUE_MATCH   \n",
        "6     as2dist2     2.1.3.2/32            IBGP      UNIQUE_MATCH   \n",
@@ -902,8 +904,8 @@
        "11  as2border2  10.23.21.2/32  EBGP_SINGLEHOP      UNIQUE_MATCH   \n",
        "12  as1border2     1.2.2.2/32            IBGP      UNIQUE_MATCH   \n",
        "13    as2core2     2.1.2.2/32            IBGP      UNIQUE_MATCH   \n",
-       "14    as2core2     2.1.2.2/32            IBGP      UNIQUE_MATCH   \n",
-       "15  as2border1  10.12.11.2/32  EBGP_SINGLEHOP      UNIQUE_MATCH   \n",
+       "14  as2border1  10.12.11.2/32  EBGP_SINGLEHOP      UNIQUE_MATCH   \n",
+       "15    as2core2     2.1.2.2/32            IBGP      UNIQUE_MATCH   \n",
        "16  as2border1     2.1.1.1/32            IBGP      UNIQUE_MATCH   \n",
        "17  as3border1  10.23.21.3/32  EBGP_SINGLEHOP      UNIQUE_MATCH   \n",
        "18    as2core1     2.1.2.1/32            IBGP      UNIQUE_MATCH   \n",
@@ -923,14 +925,14 @@
        "32    as2dist1     2.1.3.1/32            IBGP      UNIQUE_MATCH   \n",
        "33  as3border1     3.1.1.1/32            IBGP      UNIQUE_MATCH   \n",
        "34    as2dist1     2.1.3.1/32            IBGP      UNIQUE_MATCH   \n",
-       "35    as2core1     2.1.2.1/32            IBGP      UNIQUE_MATCH   \n",
-       "36    as3core1    3.10.1.1/32            IBGP      UNIQUE_MATCH   \n",
+       "35    as3core1    3.10.1.1/32            IBGP      UNIQUE_MATCH   \n",
+       "36    as2core1     2.1.2.1/32            IBGP      UNIQUE_MATCH   \n",
        "\n",
        "    Established_Neighbors  \n",
-       "0                       1  \n",
+       "0                      -1  \n",
        "1                       1  \n",
        "2                       1  \n",
-       "3                      -1  \n",
+       "3                       1  \n",
        "4                       1  \n",
        "5                       1  \n",
        "6                       1  \n",
@@ -1025,7 +1027,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
